--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,7 @@
         "src/**/*.ts",
         "src/**/*.tsx",
         "src/**/*.vue",
-        "tests/**/*.ts",
-        "tests/**/*.tsx"
+        "tests/**/*spec.ts",
     ],
     "exclude": ["node_modules"]
 }
